# karmona-backend

./: .dockerignore  .env.example  BROWSER_AGENT_INTEGRATION.md  CRON_SETUP.md  DATA_SOURCE_INTEGRATION.md  Dockerfile  KNOWLEDGE_BASE_GUIDE.md  MANUAL_SETUP_INSTRUCTIONS.md  README.md  REMAINING_KB_CLEANUP.md  VECTOR_MIGRATION_GUIDE.md  main.py  pyproject.toml  railway.cron.toml  railway.toml  run.sh  test_all_enabled.py  test_browser_agent.py  test_cafeastrology_scraper.py  test_data_sources.py  test_enriched_reflection.py  test_ephemeris.py  test_kb_retrieval.py  test_quick.py  test_scraper.py
app/: __init__.py  main.py
app/core/: __init__.py  auth.py  config.py
app/data/: tarot_cards.json
app/jobs/: daily_scrape_job.py
app/models/: __init__.py  schemas.py
app/routers/: __init__.py  account.py  check_in.py  counsel.py  forecast.py  friends.py  health.py  history.py  onboarding.py  payments.py  reflection.py  stats.py  summary.py  tarot.py  waitlist.py
app/services/: __init__.py  astrology_service.py  bedrock_service.py  browser_agent_client.py  browser_scraper.py  daily_scraper.py  ephemeris_service.py  karmona_browser_session.py  kb_retrieval_service.py  nasa_apod_service.py  scraping_sources.py  stripe_service.py  (+3 more)
database/: add_cancel_at_period_end.sql  add_cosmic_counsel_table.sql  add_daily_check_ins_table.sql  add_forecasts_table.sql  add_friend_context_to_counsel.sql  add_friends_tables.sql  add_stripe_columns.sql  schema.sql  update_mood_constraint.sql
migrations/: create_astrology_documents_table.sql
scripts/: run_daily_scrape.py
(+3 files in other folders)
