[project]
name = "karmona-backend"
version = "0.1.0"
description = "AI-powered karma reflection API - blending astrology and daily journaling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.35.0",
    "supabase>=2.9.0",
    "pyswisseph>=2.10.3",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.12",
    "bedrock-agentcore>=0.1.7",
    "browser-use<0.3.3",
    "langchain-aws>=0.2.6",
    "stripe>=11.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
